Tue Nov 14 15:09:02 2000  Gray Watson  <gray@whopper.be.256.com>

	* Releasing dmalloc version 4.8.1.

	* Added autoconf handling of the shlibdir for installing of shared
 	libraries.

Mon Nov 13 10:47:21 2000  Gray Watson  <gray@whopper.be.256.com>

	* Added improvements to the shared library creation in the Makefile.

	* Fixed the #ident "..."; semi-colon problem.  Thanks to Jonathan.

Fri Nov 10 10:27:23 2000  Gray Watson  <gray@whopper.be.256.com>

	* Releasing dmalloc version 4.8.0.

Thu Nov  9 19:58:56 2000  Gray Watson  <gray@whopper.be.256.com>

	* Added OpenBSD port information.  Hopefully this will be close to
	Free/Net/... BSD as well.

Tue Nov  7 11:39:26 2000  Gray Watson  <gray@whopper.be.256.com>

	* Renamed malloc.h to malloc_funcs.h to avoid system conflicts.

	* Made log-unknown the default and depreciated the token.  Added a
	log-known token to _only_ report on known (file/line) memory.

	* Removed INSTALL.1 file because it was basically empty.

	* Added Troubleshooting section to the INSTALL manual.

Tue Oct 10 19:03:14 2000  Gray Watson  <gray@whopper.be.256.com>

	* Did a pre-release of 4.7.2 with the autoconfigure handling for
	VA Linux release.  Thanks guys.

	* Reorged dmalloc.h.3.  Ugh.

	* malloc_verify and dmalloc_verify now return
	[D]MALLOC_VERIFY_[NO]ERROR.

	* Just about every function now initializes the library.  This was
	not the case before with some information routines.

	* dmalloc_debug now takes an unsigned-int flags and returns the
	old debug flag value.  debug_current now returns an unsigned int
	flag value.

	* Added autoconfig handling of #ident.  I really hate Unix
	sometimes for its blatant disregard for anything approaching a
	standard.  Idiots.

Wed Sep 13 14:24:46 2000  Gray Watson  <gray@256.com>

	* Fixed a bug in chunk.c found by Ian Badcoe.

	* Improved the displaying of tokens my dmalloc utility.

Tue Jul 25 11:57:49 2000  Gray Watson  <gray@256.com>

	* Releasing dmalloc version 4.7.1.
