@@ -1,6 +1,6 @@
 ###############################################################################
 # Makefile for the DMalloc library.
-# $Id: Makefile.all.in,v 1.103 2000/11/14 21:02:29 gray Exp $
+# $Id: Makefile.all.in,v 1.104 2000/11/14 23:57:07 gray Exp $
 ###############################################################################
 
 # default root installation directory
@@ -32,48 +32,95 @@ INCS = -I. -I$(srcdir) $(INCLUDES)
 LIBS = -L. @LIBS@
 
 MODULE	= dmalloc
-
 LIBRARY	= lib$(MODULE).a
-SHLIBRARY = lib$(MODULE).so
 
 # thread version of the library
 LIB_TH	= lib$(MODULE)th.a
-SHLIB_TH = lib$(MODULE)th.so
-@TH_ON@BUILD_ALL_1 = $(LIB_TH)
+LIB_TH_SL = lib$(MODULE)th.so
+@TH_ON@BUILD_ALL_1 = threads
 @TH_ON@INSTALL_LIB_1 = installth
+@SL_ON@BUILD_THREADS_1 = $(LIB_TH_SL)
+@SL_ON@INSTALL_THREADS_1 = installthsl
+@TH_ON@@SL_ON@BUILD_ALL_2 = $(LIB_TH_SL)
+@TH_ON@@SL_ON@INSTALL_LIB_2 = installthsl
 
 # C++ version of the library
 LIB_CXX	= lib$(MODULE)xx.a
-SHLIB_CXX = lib$(MODULE)xx.so
-@CXX_ON@BUILD_ALL_2 = $(LIB_CXX)
-@CXX_ON@INSTALL_LIB_2 = installcxx
+LIB_CXX_SL = lib$(MODULE)xx.so
+@CXX_ON@BUILD_ALL_3 = $(LIB_CXX)
+@CXX_ON@INSTALL_LIB_3 = installcxx
+@SL_ON@BUILD_CXX_3 = $(LIB_CXX_SL)
+@SL_ON@INSTALL_CXX_3 = installcxxsl
+@CXX_ON@@SL_ON@BUILD_ALL_4 = $(LIB_CXX_SL)
+@CXX_ON@@SL_ON@INSTALL_LIB_4 = installcxxsl
 
 # threads + C++
 LIB_TH_CXX = lib$(MODULE)thcxx.a
-@CXX_ON@@TH_ON@BUILD_ALL_3 = $(LIB_TH_CXX)
-@CXX_ON@BUILD_THREADS_3 = $(LIB_TH_CXX)
-@TH_ON@BUILD_CXX_3 = $(LIB_TH_CXX)
-@TH_ON@INSTALL_CXX_3 = installthcxx
-@CXX_ON@INSTALL_THREADS_3 = installthcxx
-@CXX_ON@@TH_ON@INSTALL_LIB_3 = installthcxx
+LIB_TH_CXX_SL = lib$(MODULE)thcxx.so
+@TH_ON@@CXX_ON@BUILD_ALL_5 = $(LIB_TH_CXX)
+@TH_ON@@CXX_ON@INSTALL_LIB_5 = installthcxx
+@TH_ON@BUILD_CXX_5 = $(LIB_TH_CXX)
+@TH_ON@INSTALL_CXX_5 = installthcxx
+@CXX_ON@BUILD_THREADS_5 = $(LIB_TH_CXX)
+@CXX_ON@INSTALL_THREADS_5 = installthcxx
+@TH_ON@@CXX_ON@@SL_ON@BUILD_ALL_6 = $(LIB_TH_CXX_SL)
+@TH_ON@@CXX_ON@@SL_ON@INSTALL_LIB_6 = installthcxxsl
+@TH_ON@@SL_ON@BUILD_CXX_6 = $(LIB_TH_CXX_SL)
+@TH_ON@@SL_ON@INSTALL_CXX_6 = installthcxxsl
+@CXX_ON@@SL_ON@BUILD_THREADS_6 = $(LIB_TH_CXX_SL)
+@CXX_ON@@SL_ON@INSTALL_THREADS_6 = installthcxxsl
+
+# shared versions of the libraries
+LIB_SL = lib$(MODULE).so
+@SL_ON@BUILD_ALL_7 = $(LIB_SL)
+@SL_ON@INSTALL_LIB_7 = installsl
+@SL_ON@BUILD_TH_CXX_7 = $(LIB_TH_CXX_SL)
+@SL_ON@INSTALL_TH_CXX_7 = installthcxxsl
+@TH_ON@BUILD_SL_7 = $(LIB_TH_SL)
+@TH_ON@INSTALL_SL_7 = installthsl
+@CXX_ON@BUILD_SL_8 = $(LIB_CXX_SL)
+@CXX_ON@INSTALL_SL_8 = installcxxsl
+@TH_ON@CXX_ON@BUILD_SL_9 = $(LIB_TH_CXX_SL)
+@TH_ON@CXX_ON@INSTALL_SL_9 = installthcxxsl
 
 # now construct our build and install targets
 BUILD_ALL = dmalloc.h $(LIBRARY) $(LIB_DIS) $(UTIL) \
-	$(BUILD_ALL_1) $(BUILD_ALL_2) $(BUILD_ALL_3)
-BUILD_CXX = $(LIB_CXX) \
-	$(BUILD_CXX_1) $(BUILD_CXX_2) $(BUILD_CXX_3)
-BUILD_THREADS = $(LIB_TH) \
-	$(BUILD_THREADS_1) $(BUILD_THREADS_2) $(BUILD_THREADS_3)
+	$(BUILD_ALL_1) $(BUILD_ALL_2) $(BUILD_ALL_3) $(BUILD_ALL_4) \
+	$(BUILD_ALL_5) $(BUILD_ALL_6) $(BUILD_ALL_7) $(BUILD_ALL_8)
 INSTALL_LIB = $(LIBRARY) $(LIB_DIS) \
-	$(INSTALL_LIB_1) $(INSTALL_LIB_2) $(INSTALL_LIB_3)
-INSTALL_CXX = $(LIB_CXX) \
-	$(INSTALL_CXX_1) $(INSTALL_CXX_2) $(INSTALL_CXX_3)
+	$(INSTALL_LIB_1) $(INSTALL_LIB_2) $(INSTALL_LIB_3) $(INSTALL_LIB_4) \
+	$(INSTALL_LIB_5) $(INSTALL_LIB_6) $(INSTALL_LIB_7) $(INSTALL_LIB_8)
+BUILD_THREADS = $(LIB_TH) \
+	$(BUILD_THREADS_1) $(BUILD_THREADS_2) $(BUILD_THREADS_3) \
+	$(BUILD_THREADS_4) $(BUILD_THREADS_5) $(BUILD_THREADS_6)
 INSTALL_THREADS = $(LIB_TH) \
-	$(INSTALL_THREADS_1) $(INSTALL_THREADS_2) $(INSTALL_THREADS_3)
+	$(INSTALL_THREADS_1) $(INSTALL_THREADS_2) $(INSTALL_THREADS_3) \
+	$(INSTALL_THREADS_4) $(INSTALL_THREADS_5) $(INSTALL_THREADS_6)
+BUILD_CXX = $(LIB_CXX) \
+	$(BUILD_CXX_1) $(BUILD_CXX_2) $(BUILD_CXX_3) $(BUILD_CXX_4) \
+	$(BUILD_CXX_5) $(BUILD_CXX_6) $(BUILD_CXX_7) $(BUILD_CXX_8)
+INSTALL_CXX = $(LIB_CXX) \
+	$(INSTALL_CXX_1) $(INSTALL_CXX_2) $(INSTALL_CXX_3) $(INSTALL_CXX_4) \
+	$(INSTALL_CXX_5) $(INSTALL_CXX_6) $(INSTALL_CXX_7) $(INSTALL_CXX_8)
+BUILD_TH_CXX = $(LIB_TH_CXX) \
+	$(BUILD_TH_CXX_1) $(BUILD_TH_CXX_2) $(BUILD_TH_CXX_3) \
+	$(BUILD_TH_CXX_4) $(BUILD_TH_CXX_5) $(BUILD_TH_CXX_6) \
+	$(BUILD_TH_CXX_7) $(BUILD_TH_CXX_8) $(BUILD_TH_CXX_9)
+INSTALL_TH_CXX = $(LIB_TH_CXX) \
+	$(INSTALL_TH_CXX_1) $(INSTALL_TH_CXX_2) $(INSTALL_TH_CXX_3) \
+	$(INSTALL_TH_CXX_4) $(INSTALL_TH_CXX_5) $(INSTALL_TH_CXX_6) \
+	$(INSTALL_TH_CXX_7) $(INSTALL_TH_CXX_8) $(INSTALL_TH_CXX_9)
+BUILD_SL = $(LIB_SL) \
+	$(BUILD_SL_1) $(BUILD_SL_2) $(BUILD_SL_3) $(BUILD_SL_4) \
+	$(BUILD_SL_5) $(BUILD_SL_6) $(BUILD_SL_7) $(BUILD_SL_8) \
+	$(BUILD_SL_9)
+INSTALL_SL = $(LIB_SL) \
+	$(INSTALL_SL_1) $(INSTALL_SL_2) $(INSTALL_SL_3) $(INSTALL_SL_4) \
+	$(INSTALL_SL_5) $(INSTALL_SL_6) $(INSTALL_SL_7) $(INSTALL_SL_8) \
+	$(INSTALL_SL_9)
 
 # library with dmalloc disabled
 LIB_DIS	= lib$(MODULE)lp.a
-SHLIB_DIS = lib$(MODULE)lp.so
 
 UTIL = $(MODULE)
 INFOFILE = $(MODULE).info
@@ -104,12 +151,14 @@ CFLAGS = $(CCFLAGS)
 TEST = $(MODULE)_t
 
 all : $(BUILD_ALL)
-@CXX_OFF@	@echo "To make the C++ version of the library type 'make cxx'"
 @TH_OFF@	@echo "To make the thread version of the library type 'make threads'"
+@CXX_OFF@	@echo "To make the C++ version of the library type 'make cxx'"
+@SL_OFF@	@echo "To make the shared version of the library type 'make shlib'"
 
 clean :
 	rm -f a.out core *.o *.t
 	rm -f $(LIBRARY) $(LIB_TH) $(LIB_CXX) $(LIB_TH_CXX) $(LIB_DIS) $(TEST)
+	rm -f $(LIB_TH_SL) $(LIB_CXX_SL) $(LIB_TH_CXX_SL) $(LIB_SL)
 	rm -f $(UTIL) dmalloc.h
 
 realclean : clean
@@ -126,19 +175,40 @@ installincs : $(HFLS)
 	$(srcdir)/mkinstalldirs $(incdir)
 	$(INSTALL_DATA) $(HFLS) $(incdir)
 
-installcxx : $(INSTALL_CXX)
+installthsl : $(LIB_TH_SL)
 	$(srcdir)/mkinstalldirs $(libdir)
-	$(INSTALL_DATA) $(LIB_CXX) $(libdir)
-@TH_OFF@	@echo "Enter 'make installthcxx' to install the threaded C++ library"
+	$(INSTALL_DATA) $(LIB_TH_SL) $(libdir)
 
 installth : $(INSTALL_THREADS)
 	$(srcdir)/mkinstalldirs $(libdir)
 	$(INSTALL_DATA) $(LIB_TH) $(libdir)
 @CXX_OFF@	@echo "Enter 'make installthcxx' to install the threaded C++ library"
+@SL_OFF@	@echo "Enter 'make installthsl' to install the threaded shared-library"
 
-installthcxx : $(LIB_TH_CXX)
+installthcxxsl : $(LIB_TH_CXX_SL)
+	$(srcdir)/mkinstalldirs $(shlibdir)
+	$(INSTALL_DATA) $(LIB_TH_CXX_SL) $(shlibdir)
+
+installthcxx : $(INSTALL_TH_CXX)
 	$(srcdir)/mkinstalldirs $(libdir)
 	$(INSTALL_DATA) $(LIB_TH_CXX) $(libdir)
+@SL_OFF@	@echo "Enter 'make installthcxxsl' to install the threaded C++ shared-library"
+
+installcxxsl : $(LIB_CXX_SL)
+	$(srcdir)/mkinstalldirs $(libdir)
+	$(INSTALL_DATA) $(LIB_CXX_SL) $(libdir)
+
+installcxx : $(INSTALL_CXX)
+	$(srcdir)/mkinstalldirs $(libdir)
+	$(INSTALL_DATA) $(LIB_CXX) $(libdir)
+@TH_OFF@	@echo "Enter 'make installthcxx' to install the threaded C++ library"
+@SL_OFF@	@echo "Enter 'make installcxxsl' to install the C++ shared-library"
+
+installsl : $(LIB_SL)
+	$(srcdir)/mkinstalldirs $(shlibdir)
+	$(INSTALL_DATA) $(srcdir)/$(LIB_SL) $(shlibdir)
+@CXX_OFF@	@echo "Enter 'make installcxxsl' to install the C++ shared-library"
+@TH_OFF@	@echo "Enter 'make installthsl' to install thread shared-library"
 
 installlib : $(INSTALL_LIB)
 	$(srcdir)/mkinstalldirs $(libdir)
@@ -146,6 +216,9 @@ installlib : $(INSTALL_LIB)
 	@RANLIB@ $(libdir)/$(LIBRARY)
 	$(INSTALL_DATA) $(LIB_DIS) $(libdir)
 	@RANLIB@ $(libdir)/$(LIB_DIS)
+@SL_OFF@	@echo "Enter 'make installsl' to install $(LIB_SL) in $(shlibdir)"
+@CXX_OFF@	@echo "Enter 'make installcxx' to install the C++ library"
+@TH_OFF@	@echo "Enter 'make installth' to install thread library"
 
 installinfo : $(srcdir)/$(INFOFILE)
 	$(srcdir)/mkinstalldirs $(infodir)
@@ -155,18 +228,11 @@ installdocs : $(srcdir)/$(HTMLFILE) $(srcdir)/$(TEXIFILE)
 	$(srcdir)/mkinstalldirs $(docdir)
 	$(INSTALL_DATA) $(srcdir)/$(HTMLFILE) $(srcdir)/$(TEXIFILE) $(docdir)
 
-installshlib : $(SHLIBRARY)
-	$(srcdir)/mkinstalldirs $(shlibdir)
-	$(INSTALL_DATA) $(srcdir)/$(SHLIBRARY) $(shlibdir)
-
 install : installdirs installincs installlib $(UTIL)
 	$(srcdir)/mkinstalldirs $(bindir)
 	$(INSTALL_PROGRAM) $(UTIL) $(bindir)
 	@echo "Enter 'make installinfo' to install $(INFOFILE) in $(infodir)"
 	@echo "Enter 'make installdocs' to install $(DOCFILES) in $(docdir)"
-	@echo "Enter 'make installshlib' to install $(SHLIBRARY) in $(shlibdir)"
-@CXX_OFF@	@echo "Enter 'make installcxx' to install the C++ library"
-@TH_OFF@	@echo "Enter 'make installth' to install thread library"
 
 dmalloc.h.2 : $(srcdir)/configure
 	$(SHELL) $(srcdir)/configure
@@ -179,39 +245,57 @@ dmalloc.h : $(srcdir)/dmalloc.h.1 dmalloc.h.2 $(srcdir)/dmalloc.h.3
 	cat $(srcdir)/dmalloc.h.1 dmalloc.h.2 $(srcdir)/dmalloc.h.3 > $@.t
 	mv $@.t $@
 
-shlib : $(SHLIBRARY)
+shlib : $(BUILD_SL)
+@TH_OFF@	@echo "To make the thread version of the library type 'make threads'"
+@CXX_OFF@	@echo "To make the C++ version of the library type 'make cxx'"
 
-# NOTE: you may have to edit the following to have it work on your system
-$(SHLIBRARY) : $(LIBRARY)
+# NOTE: you may have to edit the configure.in script to get this to
+# work on your operation system.  Please send feedback to the author
+# via: http://256.com/gray/email.html
+$(LIB_SL) : $(LIBRARY)
 	rm -f $@ $@.t
-	if (ld --version | grep '^GNU' >/dev/null 2>&1); then \
-	  ld -shared -soname $@ --whole-archive $(LIBRARY) -o $@.t ; \
-	else \
-	  ld -shared -soname $@ -all -none -lc $(LIBRARY) -o $@.t ; \
-	fi
+	@shlinkargs@
 	mv $@.t $@
 
 $(LIBRARY) : $(OBJS) $(NORMAL_OBJS)
 	ar cr $@ $?
 	@RANLIB@ $@
 
-$(LIB_TH_CXX) : $(OBJS) $(THREAD_OBJS) $(CXX_OBJS)
-	ar cr $@ $?
-	ranlib $@
-
 $(LIB_TH) : $(OBJS) $(THREAD_OBJS)
 	ar cr $@ $?
 	ranlib $@
+
+$(LIB_TH_SL) : $(LIB_TH)
+	rm -f $@ $@.t
+	@shlinkargs@
+	mv $@.t $@
 
 $(LIB_CXX) : $(OBJS) $(NORMAL_OBJS) $(CXX_OBJS)
 	ar cr $@ $?
 	ranlib $@
 
+$(LIB_CXX_SL) : $(LIB_CXX)
+	rm -f $@ $@.t
+	@shlinkargs@
+	mv $@.t $@
+
+$(LIB_TH_CXX) : $(OBJS) $(THREAD_OBJS) $(CXX_OBJS)
+	ar cr $@ $?
+	ranlib $@
+
+$(LIB_TH_CXX_SL) : $(LIB_TH_CXX)
+	rm -f $@ $@.t
+	@shlinkargs@
+	mv $@.t $@
+
 $(LIB_DIS) : dmalloc_lp.o
 	ar cr $@ $?
 	@RANLIB@ $@
 
-threadscxx : $(LIB_TH_CXX)
+threadscxxsl : $(LIB_TH_CXX_SL)
+
+threadscxx : $(BUILD_TH_CXX)
+@SL_OFF@	@echo "Enter 'make threadscxxsl' to build the threaded C++ shared-library"
 
 threads : $(BUILD_THREADS)
 @CXX_OFF@	@echo "Enter 'make threadscxx' to build the threaded C++ library"
